--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-@import url(//db.onlinewebfonts.com/c/f28a8f550d384f1e8f3c85ff728c4987?family=Far+From+Homecoming);
+@font-face {
+    font-family: 'Far From Homecoming';
+    src: url('../fonts/far-from_homecoming_updated-webfont.woff');
+}
+
  :root {
     --primary-color: #B11313;
     --primary-yellow: #f1c530;
@@ -29,6 +33,7 @@ header {
 
 a {
     font-weight: bold;
+    white-space: nowrap;
     text-decoration: none;
     color: var(--primary-white);
 }
@@ -101,6 +106,7 @@ h1 {
 .column {
     flex: 30%;
     margin: 4%;
+    height: 500px;
 }
 
 .BecomeSpiderMan {
@@ -108,6 +114,20 @@ h1 {
     background-repeat: no-repeat;
     background-size: contain;
     height: 554px;
+}
+
+.BecomeSpiderMan input[type="text"],
+.BecomeSpiderMan input[type="email"] {
+    width: 400px;
+    height: 27px;
+    border: #ffffff;
+    max-width: 600px;
+}
+
+.BecomeSpiderMan button[type="submit"] {
+    border-radius: 7px;
+    width: 170px;
+    padding: 10px
 }
 
 .Become>h5 {
@@ -120,19 +140,26 @@ h1 {
 }
 
 .Newsletter {
-    background: var(--primary-color);
+    background: url('../img/img6.png') no-repeat, var(--primary-color);
+    background-position-x: 150%;
+    background-size: 75%;
+    height: 800px;
 }
 
 .News {
     margin-left: 17%;
 }
 
-label {
-    margin-top: -10%;
-}
-
 .Letter>h5 {
     font-family: 'Far From Homecoming';
+}
+
+.Letter input[type="text"],
+.Letter input[type="email"] {
+    width: 50%;
+    height: 27px;
+    background: transparent;
+    border: 1px solid #ffffff;
 }
 
 .Black-Spiderman {
@@ -188,10 +215,9 @@ select {
     .content {
         padding-bottom: 1%;
     }
-    .Tobey,
-    .Andrew,
-    .Tom {
-        width: 50%;
+    .column {
+        width: 70%;
+        height: auto;
         margin-left: auto;
         margin-right: auto;
         text-align: center;
@@ -202,6 +228,14 @@ select {
     }
     .Become {
         margin-top: 12%;
+    }
+    .Newsletter {
+        height: 500px;
+        background-position-y: 100%;
+    }
+    .News {
+        margin-left: 0;
+        text-align: center;
     }
     .logo {
         width: 150%;
@@ -222,5 +256,15 @@ select {
     }
     select {
         padding: 1.5%;
+    }
+}
+
+@media all and (max-width:480px) {
+    .BecomeSpiderMan input[type="text"],
+    .BecomeSpiderMan input[type="email"] {
+        width: 270px;
+        height: 27px;
+        border: #ffffff;
+        max-width: 400px;
     }
 }
